# aws-bootcamp-cruddur-2023

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  docker-compose-local.yml  docker-compose.yml
aws/json/: budget-notifications-with-subscribers.json
aws/json/budget-alarm/: alarm_config.json
aws/json/ecs/: service-backend-flask.json  service-frontend-react-js.json
aws/json/lambda/: cruddur-messaging-stream.py  cruddur-post-confirmation.py
aws/json/policies/: cruddur-messaging-stream-policy.json  service-execution-policy.json
aws/json/task-definitions/: backend-flask.json
aws/json/xray/: backend_flask.json
backend-flask/: Dockerfile  requirements.txt
backend-flask/services/: create_activity.py  create_message.py  create_reply.py  message_groups.py  messages.py  notifications_activities.py  search_activities.py  show_activity.py  user_activities.py
backend_flask/: Dockerfile  app.py  openapi-3.0.yml  pyproject.toml  requirements.txt
backend_flask/db/: seed.sql
backend_flask/libs/: cognito_jwt_token.py  db.py  momento.py
backend_flask/services/: create_activity.py  create_message.py  create_reply.py  home_activities.py  message_groups.py  messages.py  show_activity.py  user_activities.py  users_short.py
frontend-react-js/: .eslintrc.json  package-lock.json  package.json
frontend-react-js/src/: index.css
frontend-react-js/src/components/: ActivityContent.js  DesktopNavigation.js  DesktopSidebar.js  JoinSection.css  MessageGroupItem.js
journal/: week0.md  week1.md  week2.md  week3.md  week4.md  week5.md
(+14 files in other folders)
